# grpc-gateway

./: .bazelrc  .git-blame-ignore-revs  .gitignore  .gitpod.yml  .golangci.yaml  .golangci.yml  .goreleaser.yml  .test.go  .travis.build-protoc.sh  .travis.yml  2.patch  ADOPTERS.md  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Chinese version of TRON Protocol document.md  Dockerfile  English version of TRON Protocol document.md  Gopkg.toml  ISSUE_TEMPLATE.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel-openapiv2_grpc_gateway  buf.gen.openapiv3.yaml  buf.gen.yaml  buf.yaml  circle.yml  commitlint.config.js  fastuuid.BUILD  fuzzit.sh  gen-proto.sh  gen.sh  glide.yaml  glog.BUILD  go.mod  go.sum  (+13 more)
codegenerator/: BUILD.bazel  parse_req_test.go
examples/: BUILD  BUILD.bazel  Gopkg.toml  README.md  a_bit_of_everything.pb.go  a_bit_of_everything.pb.gw.go  a_bit_of_everything.proto  client_test.go  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  index.html  integration_test.go  main.go  main_test.go  proto_error_test.go
examples/browser/: a_bit_of_everything_service.spec.js  bower.json  echo_service.spec.js  gulpfile.js  package.json
examples/bzl/: BUILD
examples/clients/: BUILD.bazel  a_bit_of_everything_nested.go  a_bit_of_everything_service_api.go  api_client.go  api_response.go  clients.bzl  configuration.go  diff_test.sh  echo_service_api.go  examplepb_a_bit_of_everything.go  examplepb_numeric_enum.go  examplepb_simple_message.go  nested_deep_enum.go  pom.xml  protobuf_empty.go  sub2_id_message.go  sub_string_message.go
examples/clients/abe/: ABitOfEverythingNested.go  ABitOfEverythingServiceApi.go  BUILD.bazel  ExamplepbABitOfEverything.go  a_bit_of_everything_nested.go  a_bit_of_everything_service_api.go  api_a_bit_of_everything_service.go  api_camel_case_service_name.go  api_client.go  api_echo_rpc.go  api_echo_service.go  client.go  (+33 more)
examples/examplepb/: BUILD  BUILD.bazel  a_bit_of_everything.pb.go  a_bit_of_everything.pb.gw.go  a_bit_of_everything.proto  a_bit_of_everything.swagger.json  a_bit_of_everything_proto2.pb.go  a_bit_of_everything_proto2.proto  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  echo_service.swagger.json  flow_combination.pb.go  flow_combination.pb.gw.go  flow_combination.proto  flow_combination.swagger.json  http.py  simple.pb.go  simple.pb.gw.go  simple.proto  stream.pb.go  stream.pb.gw.go  stream.proto  streamless_everything.proto  streamless_everything.swagger.json  unannotated_echo_service.pb.go  unannotated_echo_service.swagger.json  unannotated_echo_service.yaml  wrappers.pb.go  wrappers.pb.gw.go  wrappers.swagger.json
examples/gateway/: BUILD.bazel  gateway.go  handlers.go  main.go
examples/integration/: BUILD.bazel  client_test.go  fieldmask_test.go  integration_test.go  main_test.go  proto_error_test.go
examples/internal/: README.md
examples/server/: BUILD  BUILD.bazel  a_bit_of_everything.go  echo.go  fieldmask_helper.go  fieldmask_helper_test.go  flow_combination.go  main.go  non_standard_names.go  responsebody.go  unannotatedecho.go
examples/sub/: BUILD  BUILD.bazel  message.pb.go  message.proto
examples/sub2/: BUILD  BUILD.bazel  message.pb.go  message.proto
internal/casing/: BUILD.bazel  camel.go  camel_test.go
internal/codegenerator/: BUILD.bazel  parse_req.go  parse_req_test.go  supported_features.go
internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  grpc_api_configuration_test.go  openapi_configuration.go  openapi_configuration_test.go  registry.go  registry2.nogo  registry_atlas.go  registry_test.go  services.go  services_test.go  types.go  types_test.go
internal/generator/: BUILD.bazel  generator.go
openapiv3-merge/: BUILD.bazel  README.md  main.go  main_test.go
protoc-gen-grpc-gateway/: BUILD  BUILD.bazel  Dockerfile  generator.go  generator_test.go  main.go  main_go1.18.go  main_go_less1.18.go  main_test.go
protoc-gen-grpc-gateway/descriptor/: BUILD  BUILD.bazel  grpc_api_configuration.go  grpc_api_configuration_test.go  name.go  options.go  registry.go  registry_test.go  services.go  services_test.go  types.go  types_test.go
protoc-gen-grpc-gateway/generator/: BUILD  BUILD.bazel  generator.go
protoc-gen-grpc-gateway/gengateway/: BUILD  BUILD.bazel  generator.go  generator_test.go  template.go  template_local.go  template_test.go
protoc-gen-grpc-gateway/httprule/: BUILD  BUILD.bazel  compile.go  compile_test.go  parse.go  parse_test.go  types.go
protoc-gen-openapiv2/: BUILD.bazel  README_atlas.md  defs.bzl  main.go  main_atlas.go  main_go1.18.go  main_test.go
protoc-gen-openapiv2/genswagger/: atlas_patch.go  atlas_patch_test.go
protoc-gen-openapiv2/options/: BUILD.bazel  annotations.pb.go  annotations.proto  annotations.swagger.json  openapiv2.pb.go  openapiv2.proto  openapiv2.swagger.json
protoc-gen-openapiv3/: BUILD.bazel  defs.bzl  main.go  main_test.go
protoc-gen-openapiv3/options/: BUILD.bazel  annotations.pb.go  annotations.proto  annotations.swagger.json  annotations_protoopaque.pb.go  buf.gen.yaml  openapiv3.pb.go  openapiv3.proto  openapiv3.swagger.json  openapiv3_protoopaque.pb.go
protoc-gen-swagger/options/: BUILD.bazel  annotations.pb.go  annotations.proto  annotations_v3.proto  openapiv2.pb.go  openapiv2.proto  openapiv3.proto  swagger.proto
runtime/: BUILD  BUILD.bazel  context.go  context_test.go  convert.go  convert_test.go  doc.go  errors.go  errors_test.go  fieldmask.go  fieldmask_test.go  handler.go  handler_test.go  json.go  marshal_form_urlencoded.go  marshal_form_urlencoded_test.go  marshal_formpb.go  marshal_httpbody.go  marshal_httpbodyproto.go  marshal_httpbodyproto_test.go  marshal_json.go  marshal_json_test.go  marshal_jsonpb.go  marshal_jsonpb_test.go  marshal_proto.go  marshal_proto_test.go  marshal_urlencode.go  marshal_urlencode_test.go  marshal_xml.go  marshaler.go  marshaler_registry.go  marshaler_registry_test.go  marshaler_test.go  method_desciption.go  middleware.go  mux.go  mux_internal_test.go  mux_test.go  path.go  path_test.go  (+11 more)
runtime/internal/: BUILD.bazel  stream_chunk.pb.go
(+1229 files in other folders)
