load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples",
    deps = [
        "//examples/gateway:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "examples",
    embed = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "client_test.go",
        "integration_test.go",
        "main_test.go",
        "proto_error_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//examples/clients/abe:go_default_library",
        "//examples/clients/echo:go_default_library",
        "//examples/examplepb:go_default_library",
        "//examples/server:go_default_library",
        "//examples/sub:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/status:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
