load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "openapiv3-merge_lib",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/openapiv3-merge",
    visibility = ["//visibility:private"],
    deps = [
        "//openapiv3-merge/internal/merge",
    ],
)

go_binary(
    name = "openapiv3-merge",
    embed = [":openapiv3-merge_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "openapiv3-merge_test",
    srcs = ["main_test.go"],
    embed = [":openapiv3-merge_lib"],
)
