load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2",
    deps = [
        "//internal/codegenerator:go_default_library",
        "//internal/descriptor:go_default_library",
        "//protoc-gen-openapiv2/internal/genopenapi:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/golang/protobuf/protoc-gen-go/plugin:go_default_library",
        "//vendor/google.golang.org/protobuf/proto:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-openapiv2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
