load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "protoc-gen-openapiv3_lib",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv3",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/codegenerator",
        "//internal/descriptor",
        "//protoc-gen-openapiv3/internal/genopenapi",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-openapiv3",
    embed = [":protoc-gen-openapiv3_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protoc-gen-openapiv3_test",
    srcs = ["main_test.go"],
    embed = [":protoc-gen-openapiv3_lib"],
)
