load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gateway.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/examplepb:go_default_library",
        "//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
