load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "a_bit_of_everything.go",
        "echo.go",
        "fieldmask_helper.go",
        "flow_combination.go",
        "main.go",
        "responsebody.go",
        "unannotatedecho.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/server",
    deps = [
        "//examples/proto/examplepb:go_default_library",
        "//examples/proto/sub:go_default_library",
        "//examples/proto/sub2:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/rogpeppe/fastuuid:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/metadata:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fieldmask_helper_test.go"],
    embed = [":go_default_library"],
    deps = ["@io_bazel_rules_go//proto/wkt:field_mask_go_proto"],
)
