load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "casing",
    srcs = ["camel.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/internal/casing",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":casing",
    visibility = ["//:__subpackages__"],
)
