load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "descriptor",
    srcs = [
        "grpc_api_configuration.go",
        "openapi_configuration.go",
        "registry.go",
        "services.go",
        "types.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/internal/descriptor",
    deps = [
        "//internal/casing",
        "//internal/codegenerator",
        "//internal/descriptor/apiconfig",
        "//internal/descriptor/openapiconfig",
        "//internal/httprule",
        "//protoc-gen-openapiv2/options",
        "@com_github_ghodss_yaml//:yaml",
        "@com_github_golang_glog//:glog",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_test(
    name = "descriptor_test",
    size = "small",
    srcs = [
        "grpc_api_configuration_test.go",
        "openapi_configuration_test.go",
        "registry_test.go",
        "services_test.go",
        "types_test.go",
    ],
    embed = [":descriptor"],
    deps = [
        "//internal/descriptor/openapiconfig",
        "//internal/httprule",
        "//protoc-gen-openapiv2/options",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":descriptor",
    visibility = ["//:__subpackages__"],
)
